--- a/src/lib/navbar/navbar.module.css
+++ b/src/lib/navbar/navbar.module.css
@@ -16,6 +16,13 @@
     top: 0;
     left: 0;
   }
+
+  .open .navigation-trigger {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
   .navigation-trigger {
     @apply twcss-flex twcss-justify-between twcss-px-3 twcss-py-2;
   }
