--- a/src/lib/index.module.css
+++ b/src/lib/index.module.css
@@ -1,4 +1,85 @@
 /* global styles */
+
+:root {
+  --white: #fafbff;
+  --black: #181b29;
+  --light-grey: #f2f2f2;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+input {
+  color: var(--black);
+}
+
+h1 {
+  font-size: 45px;
+  font-weight: bolder;
+}
+h2 {
+  font-size: 40px;
+  font-weight: bold;
+}
+h3 {
+  font-size: 35px;
+  font-weight: bold;
+}
+h4 {
+  font-size: 30px;
+  font-weight: 700;
+}
+h5 {
+  font-size: 25px;
+  font-weight: 600;
+}
+h6 {
+  font-size: 20px;
+  font-weight: 500;
+}
+input,
+p {
+  font-size: 14px;
+}
+input {
+  background-color: inherit;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 35px;
+    font-weight: bolder;
+  }
+  h2 {
+    font-size: 30px;
+    font-weight: bold;
+  }
+  h3 {
+    font-size: 25px;
+    font-weight: bold;
+  }
+  h4 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+  h5 {
+    font-size: 17px;
+    font-weight: 600;
+  }
+  h6 {
+    font-size: 14px;
+    font-weight: 500;
+  }
+  input,
+  p {
+    font-size: 12px;
+  }
+}
+
 .flex {
   @apply twcss-flex;
 }
@@ -18,4 +99,12 @@
 }
 .align-center {
   @apply twcss-items-center twcss-justify-center;
+}
+
+.full-width {
+  width: 100% !important;
+}
+
+.default-icon-size {
+  @apply twcss-size-6;
 }
