--- a/src/lib/button/button.module.css
+++ b/src/lib/button/button.module.css
@@ -1,9 +1,20 @@
 .button {
-  @apply twcss-py-1 twcss-px-5;
+  background-color: var(--button-color);
+  color: var(--button-text-color);
+  @apply twcss-py-1 twcss-px-5 twcss-outline-0
+    twcss-border-0;
 }
 .left {
   @apply twcss-pl-2;
 }
 .right {
   @apply twcss-pr-2;
+}
+
+.button:hover {
+  background-color: var(--button-hover-color);
+}
+
+.button:active {
+  background-color: var(--button-active-color);
 }
