--- a/src/lib/input/input.module.css
+++ b/src/lib/input/input.module.css
@@ -1,8 +1,7 @@
 .container {
   background-color: var(--light-grey);
   width: fit-content;
-  @apply twcss-flex twcss-flex-row twcss-items-center
-    twcss-border-2 twcss-border-transparent;
+  @apply twcss-flex twcss-flex-row twcss-items-center twcss-border-2 twcss-border-transparent;
 }
 .input {
   @apply twcss-flex-auto twcss-rounded-sm twcss-outline-none twcss-px-3 twcss-py-1 twcss-border-none;
@@ -11,9 +10,7 @@
   @apply twcss-border-neutral-900;
 }
 .submit {
-  background-color: var(--black);
-  color: var(--white);
-  @apply twcss-align-middle;
+  @apply twcss-self-stretch;
 }
 .left {
   @apply twcss-pl-2;
